--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saijeet Personal Site</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <table cellspacing="20" >
@@ -12,7 +13,7 @@
         <td>    <img src="https://lastdoorsolutions.com/static/2de5b6ef1a0adb34ee6d41e86e8ae648/257af/saijeet_upadhyay.png" alt="Saijeet Profile Picture">
         </td>
         <td>    
-          <h1><a href="https://www.linkedin.com/feed/">Saijeet Upadhyay</a></h1>
+          <h1>Saijeet Upadhyay</h1>
           <p><em>Web Developer at <strong><a href="http://www.lastdoorsolutions.com">Last Door Solutions</strong></a></em></p>
           <p>I am a web developer who loves coffee</p>
       </td>
@@ -21,9 +22,9 @@
     <hr/>
     <h3>Education</h3>
     <ul>
-        <li>Paragon Public School</li>
-        <li>Capital College and Research Center</li>
-        <li>Herald College</li>
+        <li>Paragon Public School 2016</li>
+        <li>Capital College and Research Center 2018</li>
+        <li>Herald College 2022</li>
     </ul>
     <hr/>
     <h3>Work Experience</h3>
@@ -36,7 +37,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>2022+</td>
+          <td>2022</td>
           <td>Web Developer at Last Door Solutions</td>
         </tr>  
       </tbody>
